--- a/src/style/Story.scss
+++ b/src/style/Story.scss
@@ -195,3 +195,10 @@ input[type="submit"]:hover {
     justify-content: center;
   }
 }
+
+.formSubmitted {
+  font-weight: 100;
+  letter-spacing: 1px;
+  text-align: center;
+  margin: 5% 0% 3% 0;
+}
