--- a/src/style/Coffee.scss
+++ b/src/style/Coffee.scss
@@ -7,8 +7,6 @@ $color-light: rgb(250, 250, 250);
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  @media (max-width: 720px) {
-  }
 
   * {
     font-weight: 100;
@@ -47,6 +45,9 @@ $color-light: rgb(250, 250, 250);
       width: 100%;
     }
     &__card {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       width: 45%;
       background-color: $color-light;
       padding: 0;
@@ -56,8 +57,17 @@ $color-light: rgb(250, 250, 250);
         padding: 0.5rem;
       }
     }
-    @media (max-width: 720px) {
-      justify-content: center;
+    @media (max-width: 842px) {
+      // justify-content: center;
+      &__coffee-cards {
+        justify-content: space-between;
+        &_card {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          width: 100%;
+        }
+      }
     }
   }
 }
