--- a/src/style/Cart.scss
+++ b/src/style/Cart.scss
@@ -3,35 +3,42 @@
   margin-right: auto;
   margin-top: 4rem;
   margin-bottom: 4rem;
-  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 25px;
   width: 80%;
   height: 50%;
+
   h2 {
     margin: 0;
     padding: 0;
   }
   &__products {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    display: grid;
+    // flex-direction: row;
+    grid-template-columns: 1fr 4fr 1fr;
+    // justify-content: space-between;
 
     & img {
-      margin-bottom: -0.23rem;
+      width: 220px;
+      height: 280px;
+      margin-bottom: -0.25rem;
+      border-radius: 25px;
     }
     &--disription {
       display: flex;
       flex-direction: column;
-      margin: 2rem;
+      margin: 2rem 0 2rem 2rem;
       padding: 20px;
       letter-spacing: 2px;
       justify-content: space-between;
     }
 
     &--total {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      padding: 20px;
+      align-self: flex-end;
+      font-weight: 600;
+      & p {
+        padding-bottom: 3rem;
+      }
     }
   }
 }
@@ -40,11 +47,15 @@ $border: 0 solid #dbdbdb;
 $border-radius: 3px;
 $color--primary: #f3f3f3;
 $modifier--text-color: #888;
-
+.quantity-container {
+  position: relative;
+  margin: auto;
+}
 .quantity-input {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: auto;
 
   &:focus {
     background: red;
@@ -114,5 +125,77 @@ $modifier--text-color: #888;
   & p {
     height: 2rem;
     margin: 1rem;
+  }
+}
+
+// .buy {
+//   width: 25%;
+//   margin-left: 35%;
+//   margin-bottom: 2rem;
+// }
+
+.product-cart__summ {
+  margin-left: 65%;
+  margin-right: auto;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 25px;
+  width: 25%;
+  height: 3.5rem;
+  display: flex;
+  // justify-content: space-between;
+  & p {
+    margin: auto;
+    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+      "Segoe UI Symbol";
+    font-weight: 600;
+  }
+
+  .checkout-button {
+    appearance: none;
+    background-color: #000000;
+    border: 2px solid #1a1a1a;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #ffffff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+      "Segoe UI Symbol";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+
+    margin: auto;
+    margin-right: 1rem;
+    // min-height: 60px;
+    min-width: 0;
+    outline: none;
+    padding: 16px 24px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 100%;
+    will-change: transform;
+  }
+
+  .checkout-button:disabled {
+    pointer-events: none;
+  }
+
+  .checkout-button:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+  }
+
+  .checkout-button:active {
+    box-shadow: none;
+    transform: translateY(0);
   }
 }
